fix mnist and a bug in = operator of matrix

--- a/meson.build
+++ b/meson.build
@@ -85,4 +85,4 @@ test('MatrixHost64', matrix_unit_test_host_fp64)
 test('MatrixDevice64', matrix_unit_test_device_fp64)
 test('MempoolTets', mempool)
 test('ImageRegresion', image_nn, args : ['../assets/lena.png'])
-# test('Mnist', mnist,is_parallel:false)
+test('Mnist', mnist,is_parallel:false)
