--- a/MAKE/Makefile.kstppd
+++ b/MAKE/Makefile.kstppd
@@ -30,8 +30,8 @@ testpackage: CXXFLAGS = -g -ggdb -O2 -fopenmp -funroll-loops -std=c++20 -fabi-ve
 CXXFLAGS += -DUSE_JEMALLOC -DJEMALLOC_NO_DEMANGLE -DPAPI_MEM
 MATHFLAGS = -ffast-math -fno-finite-math-only
 testpackage: MATHFLAGS = -fno-unsafe-math-optimizations
-LDFLAGS = -L $(HOME)/lib -L./target/release/ -L./vdf_compression/cuda_mlp
-LIB_MPI = -lgomp -lmlp_cuda_compress -lzfp -lpapi
+LDFLAGS =
+LIB_MPI = -lgomp  -lzfp -lpapi
 
 
 
@@ -91,4 +91,7 @@ INC_ZFP = -I/home/kstppd/software/zfp/include/
 LIB_ZFP = -L/home/kstppd/software/zfp/build/lib
 
 INC_OCTREE_COMPRESSOR = -I./vdf_compression/include
-LIB_OCTREE_COMPRESSOR=-L./vdf_compression/lib -ltoctree_compressor
+LIB_OCTREE_COMPRESSOR = -L./vdf_compression/lib -ltoctree_compressor
+
+INC_NN_COMPRESSOR = -I./vdf_compression/lib/usr/local/include/tinyAI
+LIB_NN_COMPRESSOR= -L/home/kstppd/dev/asterix/build -L/home/kstppd/software/spdlog/build/ -lvlasiator_vdf_compressor_nn -lcudart_static  -lcublas -lspdlog -lnvToolsExt
