Fix typo in module purge, change other ukko dgx debug build to use production flags. Better naming of some CI tasks.

--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -200,7 +200,7 @@ jobs:
     - name: Unpack libraries
       run: tar --zstd -xvf libraries.tar.zstd
     - uses: ursg/gcc-problem-matcher@master
-    - name: Compile vlasiator (Release build)
+    - name: Compile vlasiator (Release, debug build)
       run: |
         VLASIATOR_ARCH=github_actions make clean
         VLASIATOR_ARCH=github_actions COMPFLAGS="-DDEBUG_VLASIATOR -DDEBUG_SOLVERS -DDEBUG_IONOSPHERE -DDEBUG_SPATIAL_CELL -DDEBUG_VMESH -DDEBUG_VBC -DDEBUG_ACC " make -j 3
@@ -318,10 +318,10 @@ jobs:
       - name: Make clean
         run: VLASIATOR_ARCH=ukko_dgx make clean
       - uses: ursg/gcc-problem-matcher@master
-      - name: Compile vlasiator (Testpackage build w/ CUDA)
+      - name: Compile vlasiator (Testpackage build w/ CUDA, debug)
         run: |
           export VLASIATOR_ARCH=ukko_dgx
-          srun -Mukko -pgpu-oversub --job-name CI_tp_compile --interactive --nodes=1 -n 1 -c 8 --mem-per-cpu=2G -t 0:20:0 bash -c 'modulepurge; ml OpenMPI/4.1.6.withucx-GCC-13.2.0 PAPI/7.1.0-GCCcore-13.2.0 CUDA/12.6.0; export VLASIATOR_ARCH=ukko_dgx; COMPFLAGS="-DDEBUG_VLASIATOR -DDEBUG_SOLVERS -DDEBUG_IONOSPHERE -DHASHINATOR_DEBUG -DDEBUG_SPATIAL_CELL -DDEBUG_VMESH -DDEBUG_VBC -DDEBUG_ACC " make -j 9 testpackage ; sleep 10s'
+          srun -Mukko -pgpu-oversub --job-name CI_dbg_compile --interactive --nodes=1 -n 1 -c 8 --mem-per-cpu=2G -t 0:20:0 bash -c 'module purge; ml OpenMPI/4.1.6.withucx-GCC-13.2.0 PAPI/7.1.0-GCCcore-13.2.0 CUDA/12.6.0; export VLASIATOR_ARCH=ukko_dgx; COMPFLAGS="-DDEBUG_VLASIATOR -DDEBUG_SOLVERS -DDEBUG_IONOSPHERE -DHASHINATOR_DEBUG -DDEBUG_SPATIAL_CELL -DDEBUG_VMESH -DDEBUG_VBC -DDEBUG_ACC " make -j 9 testpackage ; sleep 10s'
       - name: Make sure the output binary is visible in lustre
         uses: nick-fields/retry@v3
         with:
@@ -329,16 +329,16 @@ jobs:
           max_attempts: 3
           retry_on: error
           command: ls vlasiator
-      - name: Upload testpackage binary
+      - name: Upload testpackage debug binary
         uses: actions/upload-artifact@v4
         with:
           name: vlasiator-testpackage-debug-ukkoGPU
           path: vlasiator
           if-no-files-found: error
 
-  build_testpackage_debug_flags_warpAccessors_ukkoGPU:
-    # Build Vlasiator with testpackage and debug flags, on the ukko cluster using
-    # its nvidia gpus. Also turn on Warp Accessors kernel building.
+  build_production_debug_flags_warpAccessors_ukkoGPU:
+    # Build Vlasiator with production, debug, and warp accessor flags, on the ukko cluster using
+    # its nvidia gpus.
     runs-on: carrington
 
     steps:
@@ -358,10 +358,10 @@ jobs:
       - name: Make clean
         run: VLASIATOR_ARCH=ukko_dgx make clean
       - uses: ursg/gcc-problem-matcher@master
-      - name: Compile vlasiator (Testpackage build w/ CUDA)
+      - name: Compile vlasiator (Production build w/ CUDA, debug, WA)
         run: |
           export VLASIATOR_ARCH=ukko_dgx
-          srun -Mukko -pgpu-oversub --job-name CI_tp_compile --interactive --nodes=1 -n 1 -c 8 --mem-per-cpu=2G -t 0:20:0 bash -c 'modulepurge; ml OpenMPI/4.1.6.withucx-GCC-13.2.0 PAPI/7.1.0-GCCcore-13.2.0 CUDA/12.6.0; export VLASIATOR_ARCH=ukko_dgx; COMPFLAGS="-DDEBUG_VLASIATOR -DDEBUG_SOLVERS -DDEBUG_IONOSPHERE -DHASHINATOR_DEBUG -DDEBUG_SPATIAL_CELL -DDEBUG_VMESH -DDEBUG_VBC -DDEBUG_ACC -DUSE_WARPACCESSORS " make -j 9 testpackage ; sleep 10s'
+          srun -Mukko -pgpu-oversub --job-name CI_tp_compile --interactive --nodes=1 -n 1 -c 8 --mem-per-cpu=2G -t 0:20:0 bash -c 'module purge; ml OpenMPI/4.1.6.withucx-GCC-13.2.0 PAPI/7.1.0-GCCcore-13.2.0 CUDA/12.6.0; export VLASIATOR_ARCH=ukko_dgx; COMPFLAGS="-DDEBUG_VLASIATOR -DDEBUG_SOLVERS -DDEBUG_IONOSPHERE -DHASHINATOR_DEBUG -DDEBUG_SPATIAL_CELL -DDEBUG_VMESH -DDEBUG_VBC -DDEBUG_ACC -DUSE_WARPACCESSORS " make -j 9 ; sleep 10s'
       - name: Make sure the output binary is visible in lustre
         uses: nick-fields/retry@v3
         with:
@@ -369,10 +369,10 @@ jobs:
           max_attempts: 3
           retry_on: error
           command: ls vlasiator
-      - name: Upload testpackage binary
+      - name: Upload production debug warp accessor binary
         uses: actions/upload-artifact@v4
         with:
-          name: vlasiator-testpackage-debug-WA-ukkoGPU
+          name: vlasiator-production-debug-WA-ukkoGPU
           path: vlasiator
           if-no-files-found: error
 
