--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -95,7 +95,7 @@ jobs:
           retention-days: 5
           if-no-files-found: error
 
-  build_production:
+  build_prod:
     # Build Vlasiator with production flags
     runs-on: ubuntu-latest
     container: ursg/vlasiator_ci:20241101_1
@@ -124,7 +124,7 @@ jobs:
         path: vlasiator
         if-no-files-found: error
 
-  build_production_1st_order_time:
+  build_prod_ord1_time:
     # Build Vlasiator with production flags
     runs-on: ubuntu-latest
     container: ursg/vlasiator_ci:20241101_1
@@ -153,7 +153,7 @@ jobs:
         path: vlasiator
         if-no-files-found: error
 
-  build_production_1st_order_space:
+  build_prod_ord1_space:
     # Build Vlasiator with production flags
     runs-on: ubuntu-latest
     container: ursg/vlasiator_ci:20241101_1
@@ -182,7 +182,7 @@ jobs:
         path: vlasiator
         if-no-files-found: error
 
-  build_production_debug_flags:
+  build_prod_debug_flags:
     # Build Vlasiator with production flags and all the debug flags enabled to check the debug code is still ok
     runs-on: ubuntu-latest
     container: ursg/vlasiator_ci:20241101_1
@@ -211,7 +211,7 @@ jobs:
         path: vlasiator
         if-no-files-found: error
 
-  build_testpackage:
+  build_TP:
     # Build Vlasiator with testpackage flags, on the carrington cluster
     # (for subsequent running of the integration test package)
     runs-on: carrington
@@ -256,7 +256,7 @@ jobs:
     #    name: Testpackage build log
     #    path: build.log
 
-  build_testpackage_ukkoGPU:
+  build_TP_ukkoGPU:
     # Build Vlasiator with testpackage flags, on the ukko cluster using
     # its nvidia gpus
     runs-on: carrington
@@ -296,7 +296,7 @@ jobs:
           path: vlasiator
           if-no-files-found: error
 
-  build_testpackage_debug_flags_ukkoGPU:
+  build_TP_debug_flags_ukkoGPU:
     # Build Vlasiator with testpackage and debug flags, on the ukko cluster using
     # its nvidia gpus
     runs-on: carrington
@@ -336,7 +336,7 @@ jobs:
           path: vlasiator
           if-no-files-found: error
 
-  build_production_debug_flags_warpAccessors_ukkoGPU:
+  build_prod_debug_flags_WA_ukkoGPU:
     # Build Vlasiator with production, debug, and warp accessor flags, on the ukko cluster using
     # its nvidia gpus.
     runs-on: carrington
@@ -514,10 +514,10 @@ jobs:
           vlsvdiff_DP
         if-no-files-found: error
 
-  run_testpackage:
+  run_TP:
     # Run the testpackage on the carrington cluster
     runs-on: carrington
-    needs: [build_testpackage, build_tools]
+    needs: [build_TP, build_tools]
     continue-on-error: true
 
     steps:
@@ -576,10 +576,10 @@ jobs:
       # Note: Testpackage output is further processed in the pr_report.yml workflow
       # (to produce Checks against pull requests)
 
-  # run_testpackage_ukkoGPU:
+  # run_TP_ukkoGPU:
   #   # Run the testpackage on the Ukko GPU cluster (via Carrington frontend)
   #   runs-on: carrington
-  #   needs: [build_testpackage_ukkoGPU, build_tools_ukkoGPU]
+  #   needs: [build_TP_ukkoGPU, build_tools_ukkoGPU]
   #   continue-on-error: true
 
   #   steps:
@@ -723,7 +723,7 @@ jobs:
   check_cfg_files:
     runs-on: ubuntu-latest
     container: ursg/vlasiator_ci:20241101_1
-    needs: [build_libraries, build_production]
+    needs: [build_libraries, build_prod]
     steps:
     - name: Checkout source
       uses: actions/checkout@v4
