--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
       - name: Run library build script
-        run: ./build_libraries.sh
+        run: ./fetch_and_build_libraries.sh
       - name: Build libraries tar
         run: tar --zstd -cvf libraries.tar.zstd libraries/
       - name: Upload libraries as artifact
@@ -57,7 +57,7 @@ jobs:
           echo "MPI_CC=mpicc" >> "$GITHUB_ENV"
       - name: Run library build script
         run: |
-          . ./build_libraries.sh appleM1
+          . ./fetch_and_build_libraries.sh appleM1
       - name: Build libraries tar
         run: tar --zstd -cvf libraries-appleM1.tar.zstd libraries-appleM1
       - name: Upload libraries as artifact
@@ -83,8 +83,8 @@ jobs:
           rm -rf libraries library-build libraries-arriesgado.tar.gz
       - name: Submit library job
         run: |
-          #srun --interactive -p arriesgado-jammy -J vlasiator-libs -n 1 -c 4 -t 01:00:00 bash -lc 'module load openmpi; ./build_libraries.sh arriesgado'
-          ssh synth-hca 'source /etc/profile.d/lmod.sh; export PATH=$PATH:$HOME/bin; module load llvm/cross/EPI-0.7-development; cd '$GITHUB_WORKSPACE'; ./build_libraries.sh arriesgado'
+          #srun --interactive -p arriesgado-jammy -J vlasiator-libs -n 1 -c 4 -t 01:00:00 bash -lc 'module load openmpi; ./fetch_and_build_libraries.sh arriesgado'
+          ssh synth-hca 'source /etc/profile.d/lmod.sh; export PATH=$PATH:$HOME/bin; module load llvm/cross/EPI-0.7-development; cd '$GITHUB_WORKSPACE'; ./fetch_and_build_libraries.sh arriesgado'
       - name: Build libraries tar
         run: tar -czvf libraries-arriesgado.tar.gz libraries-arriesgado/
       - name: Upload libraries as artifact
