--- a/MAKE/Makefile.hile_gpu
+++ b/MAKE/Makefile.hile_gpu
@@ -1,14 +1,21 @@
+# Makefile for the Hile Cluster at UH (GPU nodes).
 # compile on compute node
-# srun -p gpu -w x3000c0s8b1n0 -c 16 --mem=20G -t1-0 --pty bash
 #
-# export VLASIATOR_ARCH=hile_gpu
-# module unload perftools-base
+# ssh hile01.it.helsinki.fi
+# ./fetch_libraries.sh hile_gpu
+# srun -C g -c 16 --mem=20G --pty bash
 # module load papi
-# module load cray-pmi
-# module load cray-mpich
-# module load craype-accel-amd-gfx90a
 # module load rocm/6.2.0
-#
+# module load cray-pmi
+# module load craype-accel-amd-gfx90a
+# module load libfabric/1.22.0
+# export MPICH_GPU_SUPPORT_ENABLED=1
+# export VLASIATOR_ARCH=hile_gpu
+# ./build_fetched_libraries.sh hile_gpu
+
+# #SBATCH -C g # for GPU nodes (flavor)
+# Use of #SBATCH --distribution=block:block may improve performance
+# As of March 2025, use srun --mpi=pmi2 to launch
 # export MPICH_GPU_SUPPORT_ENABLED=1
 
 CMP = OMPI_CXX='hipcc' CC
@@ -59,15 +66,14 @@ testpackage: CXXFLAGS +=  -DPAPI_MEM
 
 #======== Libraries ===========
 # Select the base directory based on which project you are using:
-# TODO: Make group directory in new lustre
-LIBRARY_PREFIX = /wrk-kappa/users/markusb/vlasiator/libraries-hile_gpu
+LIBRARY_PREFIX = /wrk-kappa/group/spacephysics/vlasiator/libraries/libraries-hile_gpu
 
 # System boost
 LIB_BOOST = -lboost_program_options -L/usr/lib64 -Wl,-rpath=/usr/lib64
 
 # Compiled libraries
 INC_ZOLTAN = -isystem $(LIBRARY_PREFIX)/include
-LIB_ZOLTAN = -L$(LIBRARY_PREFIX)/lib -lzoltan -Wl,-rpath=$(LIBRARY_PREFIX)/lib
+LIB_ZOLTAN = -L$(LIBRARY_PREFIX)/lib64 -lzoltan -Wl,-rpath=$(LIBRARY_PREFIX)/lib64
 
 LIB_PAPI = -lpapi
 
