Fix compilation, fix dt_ceil, port LossCone project and mu datareducer to arch. Untested.

--- a/projects/LossCone/LossCone.cfg
+++ b/projects/LossCone/LossCone.cfg
@@ -85,7 +85,4 @@ TemperatureY = $TemperatureY$
 TemperatureZ = $TemperatureZ$
 densityPertRelAmp = 0.0
 velocityPertAbsAmp = 10000.0
-maxwCutoff = 1.0e-14
-nSpaceSamples = 2
-nVelocitySamples = 2
-
+muLimit = 0.5
