--- a/MAKE/Makefile.Freezer
+++ b/MAKE/Makefile.Freezer
@@ -13,13 +13,11 @@ LNK = mpic++
 ifeq ($(DISTRIBUTION_FP_PRECISION),SPF)
 #Single-precision        
 	VECTORCLASS = VEC8F_AGNER
-# 	VECTORCLASS = VEC8F_FALLBACK
-#	INC_VECTORCLASS = -I$(LIBRARY_PREFIX)/../vlasiator/vlasovsolver
+# 	VECTORCLASS = VEC_FALLBACK_GENERIC
 else
 #Double-precision
 	VECTORCLASS = VEC4D_AGNER
-#	VECTORCLASS = VEC4D_FALLBACK
-#	INC_VECTORCLASS = -I$(LIBRARY_PREFIX)/../vlasiator/vlasovsolver
+#	VECTORCLASS = VEC_FALLBACK_GENERIC
 endif
 
 #======= Compiler and compilation flags =========
