--- a/MAKE/Makefile.Freezer
+++ b/MAKE/Makefile.Freezer
@@ -8,12 +8,12 @@ LNK = mpic++
 #Options: 
 # AVX:	    VEC4D_AGNER, VEC4F_AGNER, VEC8F_AGNER
 # AVX512:   VEC8D_AGNER, VEC16F_AGNER
-# Fallback: VEC4D_FALLBACK, VEC4F_FALLBACK, VEC8F_FALLBACK
+# Fallback: VEC_FALLBACK_GENERIC
 
 ifeq ($(DISTRIBUTION_FP_PRECISION),SPF)
 #Single-precision        
 	VECTORCLASS = VEC8F_AGNER
-# 	VECTORCLASS = VEC_FALLBACK_GENERIC
+#	VECTORCLASS = VEC_FALLBACK_GENERIC
 else
 #Double-precision
 	VECTORCLASS = VEC4D_AGNER
