Allow overriding PAD NU0 file with parameter, update LossCone config

--- a/projects/LossCone/LossCone.cfg
+++ b/projects/LossCone/LossCone.cfg
@@ -8,8 +8,8 @@ mass_units = PROTON
 charge = 1
 
 [io]
-diagnostic_write_interval = 1
-system_write_t_interval = 0.25
+diagnostic_write_interval = 100
+system_write_t_interval = 10
 system_write_file_name = bulk
 system_write_distribution_stride = 0
 system_write_distribution_xline_stride = 201
@@ -17,35 +17,35 @@ system_write_distribution_yline_stride = 201
 system_write_distribution_zline_stride = 1
 
 [gridbuilder]
-x_length = $cells$
-y_length = $cells$
+x_length = 1
+y_length = 1
 z_length = 1
 x_min = 0.0
-x_max = $length$
+x_max = 9.0e5
 y_min = 0.0
-y_max = $length$
+y_max = 9.0e5
 z_min = 0
-z_max = $res$
-t_max = 100
+z_max = 9.0e5
+t_max = 50
 dt = 0.01
 
 [PAD]
-enable      = 0
-coefficient = 1.0
-CFL         = 1.0
+enable      = 1
+coefficient = 0.01 # negative values (default) use .DAT file
+CFL         = 0.5
 vbins       = 200
 mubins      = 30
 
 [proton_vspace]
-vx_min = -4020000
-vx_max = +4020000 # in Blocks so * 4
-vy_min = -4020000
-vy_max = +4020000
-vz_min = -4020000
-vz_max = +4020000
-vx_length = 67
-vy_length = 67
-vz_length = 67
+vx_min = -3.6e6
+vx_max = +3.6e6
+vy_min = -3.6e6
+vy_max = +3.6e6
+vz_min = -3.6e6
+vz_max = +3.6e6
+vx_length = 60
+vy_length = 60
+vz_length = 60
 
 [boundaries]
 periodic_x = yes
@@ -61,7 +61,7 @@ output = fg_e
 diagnostic = populations_vg_blocks
 output = vg_b_vol
 output = vg_f_saved
-output = populations_1dmuspace
+#output = populations_1dmuspace
 
 [loadBalance]
 algorithm = RCB
@@ -71,7 +71,7 @@ tolerance = 1.05
 minValue = 1.0e-14
 
 [LossCone]
-BX0 = $BX0$
+BX0 = 17e-9
 BY0 = 0.0
 BZ0 = 0.0
 magXPertAbsAmp = 0.0
@@ -80,9 +80,9 @@ magZPertAbsAmp = 0.0
 
 [proton_LossCone]
 rho = 3.0e6
-TemperatureX = $TemperatureX$
-TemperatureY = $TemperatureY$
-TemperatureZ = $TemperatureZ$
+TemperatureX = 5.8e6
+TemperatureY = 23.2e6
+TemperatureZ = 23.2e6
 densityPertRelAmp = 0.0
 velocityPertAbsAmp = 10000.0
-muLimit = 0.5
+#muLimit = 0.5
