Add populations_vg_1dmuspace reducer to help output for config checking

--- a/testpackage/tests/subgrid_1_diffusion/subgrid_1_diffusion.cfg
+++ b/testpackage/tests/subgrid_1_diffusion/subgrid_1_diffusion.cfg
@@ -60,12 +60,12 @@ periodic_z = yes
 output = populations_vg_rho
 output = populations_vg_v
 output = populations_vg_ptensor
+output = populations_vg_1dmuspace
 output = fg_b
 output = fg_e
-diagnostic = populations_vg_blocks
 output = vg_b_vol
 output = vg_f_saved
-output = populations_1dmuspace
+diagnostic = populations_vg_blocks
 
 [loadBalance]
 algorithm = RCB
