--- a/MAKE/Makefile.kstppd
+++ b/MAKE/Makefile.kstppd
@@ -1,7 +1,7 @@
 #Kostis Laptop
 #Compiler & Linker
-CMP = /usr/bin/mpic++ -ggdb -g3
-LNK = /usr/bin/mpic++ -ggdb -g3
+CMP = mpic++ -ggdb -g3
+LNK = mpic++ -ggdb -g3
 
 
 #======== Vectorization ==========
@@ -33,9 +33,6 @@ testpackage: MATHFLAGS = -fno-unsafe-math-optimizations
 LDFLAGS =
 LIB_MPI = -lgomp  -lzfp -lpapi
 
-
-
-
 #================PAPI==================
 #Add PAPI_MEM define to use papi to report memory consumption?
 CXXFLAGS +=  -DPAPI_MEM
@@ -48,22 +45,14 @@ testpackage: CXXFLAGS +=  -DPAPI_MEM
 CXXFLAGS += -DUSE_JEMALLOC -DJEMALLOC_NO_DEMANGLE
 testpackage: CXXFLAGS += -DUSE_JEMALLOC -DJEMALLOC_NO_DEMANGLE
 
-#======== Allocator =========
-#Use TBB malloc
-
-
-PAPI_FLAG =
-
-
 #======== Libraries ===========
-
-LIBRARY_PREFIX =  /home/kstppd/Desktop/install_v/wrk/
+LIBRARY_PREFIX = /home/kstppd/software/vlasiator_libs
 
 INC_BOOST = -I/usr/include/boost/
 LIB_BOOST = -L/usr/lib/x86_64-linux-gnu/ -lboost_program_options
 
-INC_ZOLTAN = -I$(LIBRARY_PREFIX)/zoltan/include
-LIB_ZOLTAN = -L$(LIBRARY_PREFIX)/zoltan/lib -lzoltan
+INC_ZOLTAN = -I$(LIBRARY_PREFIX)/include
+LIB_ZOLTAN = -L$(LIBRARY_PREFIX)/lib -lzoltan
 
 INC_VLSV = -I$(LIBRARY_PREFIX)/vlsv
 LIB_VLSV = -L$(LIBRARY_PREFIX)/vlsv -lvlsv
@@ -72,17 +61,16 @@ INC_SILO = -I$(LIBRARY_PREFIX)/include
 LIB_SILO = -L$(LIBRARY_PREFIX)/lib -lsilo
 
 INC_DCCRG = -I./submodules/dccrg
-
 INC_FSGRID = -I./submodules/fsgrid
 
-INC_PAPI = -I$(LIBRARY_PREFIX)/papi/include
-LIB_PAPI = -L$(LIBRARY_PREFIX)/papi/src -lpapi
+INC_PAPI = -I$(LIBRARY_PREFIX)/include
+LIB_PAPI = -L$(LIBRARY_PREFIX)/lib/ -lpapi
 
 INC_JEMALLOC = -I$(LIBRARY_PREFIX)/jemalloc/include
 LIB_JEMALLOC = -L$(LIBRARY_PREFIX)/jemalloc/lib -ljemalloc
 
-LIB_PROFILE = -L$(LIBRARY_PREFIX)/phiprof/lib -lphiprof
-INC_PROFILE = -I$(LIBRARY_PREFIX)/phiprof/include
+LIB_PROFILE = -L$(LIBRARY_PREFIX)/lib -lphiprof
+INC_PROFILE = -I$(LIBRARY_PREFIX)/include
 
 INC_VECTORCLASS = -isystem ./submodules/vectorclass/ -isystem ./submodules/vectorclass-addon/vector3d/
 INC_EIGEN = -isystem ./submodules/eigen/
@@ -94,4 +82,4 @@ INC_OCTREE_COMPRESSOR = -I./vdf_compression/include
 LIB_OCTREE_COMPRESSOR = -L./vdf_compression/lib -ltoctree_compressor
 
 INC_NN_COMPRESSOR = -I./vdf_compression/lib/usr/local/include/tinyAI
-LIB_NN_COMPRESSOR= -L/home/kstppd/dev/asterix/build -L/home/kstppd/software/spdlog/build/ -lvlasiator_vdf_compressor_nn -lcudart_static  -lcublas -lspdlog -lnvToolsExt
+LIB_NN_COMPRESSOR= -L/home/kstppd/dev/asterix/build -L/home/kstppd/software/spdlog/build/ -lvlasiator_vdf_compressor_nn -lcudart_static  -lcublas -lspdlog -lnvToolsExt 
