Turn off vlsv comparison for generating new reference data on carrington

--- a/.github/workflows/generate-reference-data.yml
+++ b/.github/workflows/generate-reference-data.yml
@@ -75,6 +75,7 @@ jobs:
         export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$GITHUB_WORKSPACE/libraries/lib
         # Fudge the run script
         sed -i 's/\/proj\/USERNAME\/BINARYNAME/$GITHUB_WORKSPACE\/vlasiator/' ./small_test_carrington.sh
+        sed -i 's/create_verification_files=0/create_verification_files=1/' ./small_test_carrington.sh
         sbatch -W -o testpackage_run_output.txt --job-name CI_ref_generate ./small_test_carrington.sh
         cat testpackage_run_output.txt
         # Generate reference fluxfunction files
