--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -296,6 +296,46 @@ jobs:
           path: vlasiator
           if-no-files-found: error
 
+  build_TP_HILE-G:
+    # Build Vlasiator with testpackage flags, on the HILE cluster using
+    # its AMD gpus
+    runs-on: hile
+
+    steps:
+      - name: Clean workspace
+        run: |
+          RUN_STRING=$( cat << MORO
+          rm -rf libraries library-build testpackage
+          rm -f libraries.tar.zst testpackage_check_description.txt testpackage-output.tar.gz metrics.txt stdout.txt stderr.txt testpackage_output_variables.txt
+          rm -f *.xml
+          MORO
+          )
+          srun -C c bash -c "$RUN_STRING"
+      - name: Checkout source
+        uses: actions/checkout@v4
+        with:
+          submodules: true
+      - name: Make clean
+        run: VLASIATOR_ARCH=hile_gpu make clean
+      - uses: ursg/gcc-problem-matcher@master
+      - name: Compile vlasiator (Testpackage build w/ HIP)
+        run: |
+          export VLASIATOR_ARCH=hile_gpu
+          srun -C c --job-name CI_tp_compile --interactive --nodes=1 -n 1 -c 16 --mem-per-cpu=2G -t 0:20:0 bash -c 'module load papi; module load cray-pmi; module load libfabric/1.22.0; export VLASIATOR_ARCH=hile_cpu; make -j 16 testpackage; sleep 10s'
+      - name: Make sure the output binary is visible in lustre
+        uses: nick-fields/retry@v3
+        with:
+          timeout_seconds: 15
+          max_attempts: 3
+          retry_on: error
+          command: ls vlasiator
+      - name: Upload testpackage binary
+        uses: actions/upload-artifact@v4
+        with:
+          name: vlasiator-testpackage-HILE-G
+          path: vlasiator
+          if-no-files-found: error
+
   build_TP_debug_ukkoGPU:
     # Build Vlasiator with testpackage and debug flags, on the ukko cluster using
     # its nvidia gpus
