--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -861,15 +861,21 @@ jobs:
     - name: checkout Analysator
       run: |
         apt update
-        apt -y install python3 python3-numpy python3-matplotlib gnuplot-nox
+        apt -y install python3 gnuplot-nox
         cd mini-apps/ionosphereSolverTests/
         git clone https://github.com/fmihpc/analysator
+        export TMPDIR=$RUNNER_TEMP
+        python3 -m venv test_venv
+        source ./test_venv/bin/activate
+        python3 -m ensurepip
+        python3 -m pip install --upgrade pip
+        python3 -m pip install --editable analysator
     - name: Run LFMtest
       run: |
         chmod +x $GITHUB_WORKSPACE/main
         cd mini-apps/ionosphereSolverTests/
         OMP_NUM_THREADS=1 $GITHUB_WORKSPACE/main -N 2000 -r 40 90 -r 50 90 -r 60 80 -sigma 10 -fac merkin2010 -gaugeFix equator45 -o LFMtest.vlsv -maxIter 10000
-        export PYTHONPATH=$PYTHONPATH:analysator
+        source ./test_venv/bin/activate
         export PTNONINTERACTIVE=1
         python3 ./lfmformat.py LFMtest.vlsv > lfmtest.dat
         ./plot_LFMtest.gp
